syntax = "proto3";

package mailer;

// Email service definition
service MailerService {
  // Send email
  rpc SendEmail (EmailRequest) returns (EmailResponse) {}
}

// Email request message
message EmailRequest {
  string to = 1;
  string subject = 2;
  string template_name = 3;
  map<string, string> template_data = 4;
}

// Email response message
message EmailResponse {
  bool success = 1;
  string message = 2;
  string message_id = 3;
}
